# Anima

./: .gitignore  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  flutter_rust_bridge.yaml
backend/: Cargo.toml
backend/src/: api.rs  frb_generated.rs  lib.rs  main.rs
backend/src/database/: db_manager.rs  lib.rs  vector_search.rs
backend/src/models/: identity.rs  lib.rs  memory.rs
backend/src/services/: ai.rs  chat.rs  lib.rs  sleep_cycle.rs
docs/: API.md  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  ROADMAP.md
docs/database/: SCHEMA.md
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/integration_test/: simple_test.dart
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  main.dart
frontend/lib/screens/: brain_screen.dart  home_screen.dart  memory_browser_screen.dart  mirror_screen.dart  onboarding_screen.dart  settings_screen.dart
frontend/lib/services/: anima_service.dart  translation_service.dart
frontend/lib/widgets/: chat_bubble.dart  custom_title_bar.dart  lib.dart  main_drawer.dart  message_input.dart  starfield_overlay.dart
frontend/rust/: Cargo.toml
frontend/rust/.cargo/: config.toml
frontend/rust/src/: ai.rs  db.rs  frb_generated.rs  lib.rs
frontend/rust/src/api/: simple.rs
frontend/rust_builder/: README.md  pubspec.yaml
frontend/rust_builder/android/: build.gradle  settings.gradle
frontend/rust_builder/cargokit/: run_build_tool.cmd
frontend/rust_builder/ios/: rust_lib_anima.podspec
frontend/rust_builder/linux/: CMakeLists.txt
frontend/rust_builder/macos/: rust_lib_anima.podspec
frontend/rust_builder/windows/: CMakeLists.txt
frontend/web/: index.html  manifest.json
frontend/windows/flutter/: generated_plugins.cmake
frontend/windows/runner/: Runner.rc  main.cpp
quickinstall/: install.ps1  install.sh
(+9 files in other folders)
