[package]
name = "anima-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "anima_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled", "bundled-sqlcipher", "chrono", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# LLM Integration
# llama_cpp_rs = "0.1"  # For llama.cpp integration
ndarray = "0.15"  # For vector/embedding operations

# Vector Database
serde_json = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
flutter_rust_bridge = "=2.11.1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# IPC
interprocess = "1.2"  # For Unix sockets and named pipes

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Development
[dev-dependencies]
tempfile = "3.8"

