[package]
name = "rust_lib_anima"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rusqlite = { version = "0.32", features = ["bundled"] }
llama-cpp-2 = "0.1.136"
llama-cpp-sys-2 = "0.1.136"
serde_json = "1.0"
chrono = "0.4"
regex = "1.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
